# data-engineering-boilerplate

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
schema/: config.sh  tables.sql
scripts/: wt
service/: bronze_consumer.py  db.py  kafka_client.py  lake.py  requirements.txt  stream_handles.py
service/pipeline_tests/: Dockerfile  requirements.txt  tests.sh
service/pipeline_tests/tests/: conftest.py  test_bronze_consumer.py  test_handles.py
service/sensor_earthquake/: Dockerfile  earthquake_activity.py  main.py  requirements.txt
service/sensor_tectonic_stress/: Dockerfile  main.py  requirements.txt  tectonic_stress_activity.py
