[project]
name = "data-engineering-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "iniconfig==2.3.0",
    "kafka-python==2.3.0",
    "minio>=7.2.20",
    "packaging==25.0",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "sqlalchemy==2.0.45",
    "typing-extensions==4.15.0",
]
